# MemForge

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/cli/: main.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  base.py  entities.py  enums.py
app/pipelines/: write_pipeline.py
app/repositories/: __init__.py  base.py  checkpoint.py  memory.py  retrieval_log.py
app/retrieval/: prompt_builder.py  ranking.py
app/services/: __init__.py  checkpoint.py  memory.py  retrieval.py
docs/: MEMORY_MODEL.md
examples/: personal_assistant.py
scripts/: export_data.py  import_data.py  seed_demo_data.py
sdk/python/memforge/: __init__.py  client.py
tests/unit/: test_models.py  test_pipeline.py  test_services.py
