[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "memforge"
version = "0.1.0"
description = "Local-first hybrid memory system for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Pushpa" }
]
dependencies = [
  "fastapi==0.103.2",
  "uvicorn==0.23.2",
  "sqlmodel==0.0.8",
  "SQLAlchemy==1.4.41",
  "alembic==1.12.1",
  "pydantic==1.10.15",
  "python-dotenv==1.0.1",
  "typer==0.9.4",
  "rich==13.7.1",
  "httpx==0.24.1"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-cov==5.0.0",
  "pytest-asyncio==0.23.7"
]

[project.urls]
Homepage = "https://github.com/your-username/memforge"
Repository = "https://github.com/your-username/memforge"
Issues = "https://github.com/your-username/memforge/issues"

[project.scripts]
memforge = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app", "sdk/python/memforge"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
